Fix overflow on carousel-hero

--- a/styles.css
+++ b/styles.css
@@ -431,7 +431,6 @@ section:nth-of-type(2n + 4) {
     grid-template-columns: 1fr 1fr;
 
     margin-top: 3rem;
-    padding: max(20px, 5vh) 0;
   }
 
   .hero-carousel-item {
